# RegistrationForm

./: LICENSE  README.md
backend/: Cargo.toml
backend/migrations/2018-06-05-210908_guests/: down.sql  up.sql
backend/src/: db.rs  family.rs  main.rs  person.rs  schema.rs
frontend/: index.html
frontend/javascript/: form.js  guests.js
