[package]
name = "backend"
version = "0.1.0"
authors = ["haomin"]

[dependencies]
rocket = "0.3"
rocket_codegen = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "1.2.*", features = ["mysql"] }
diesel_codegen = { version = "0.16", features = ["mysql"] }
r2d2 = "0.8"
r2d2-diesel = "1.0"

[dependencies.rocket_contrib]
version = "0.3"
default-features = false
features = ["json"]

